--- a/presentation/styles.css
+++ b/presentation/styles.css
@@ -1,6 +1,6 @@
 
 .reveal pre.sourceCode code {
-  font-size: 1.2em !important; 
+  font-size: 1.13em !important; 
   max-height: none !important;
 }
 
@@ -13,6 +13,10 @@
 .cell-output {
     padding-top: 20px;
     margin-left: 80px;
+}
+
+.reveal pre code {
+    max-height: 600px;
 }
 
 /* Increase font size and line height for better readability */
